--- a/src/components/slides-card/sliders-card.css
+++ b/src/components/slides-card/sliders-card.css
@@ -1,8 +1,242 @@
 .wrapper__slider {
   position: relative;
   display: flex;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
+  width: 100%;
+  height: 408px;
+  overflow: hidden;
   background-image: url('../../img/bg_match_opacity.png');
+}
+
+.add-card_1 {
+  animation: left-one-card;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.remove-card_1 {
+  animation: right-one-card;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.add-card_2_1 {
+  animation: left-two-card-1;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.remove-card_2_1 {
+  animation: right-two-card-1;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.add-card_2_2 {
+  animation: left-two-card-2;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.remove-card_2_2 {
+  animation: right-two-card-2;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.add-card_3_1 {
+  animation: left-thre-card;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.remove-card_3_1 {
+  animation: right-thre-card;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.add-card_3_2 {
+  animation: left-thre-card-1;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.remove-card_3_2 {
+  animation: right-thre-card-1;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.add-card_3_3 {
+  animation: left-thre-card-2;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.remove-card_3_3 {
+  animation: right-thre-card-2;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes left-one-card {
+  0% {
+    left: 1024px;
+    opacity: 0.2;
+  }
+
+  25% {
+    opacity: 0.4;
+  }
+
+  50% {
+    opacity: 0.6;
+  }
+
+  100% {
+    left: 362px;
+    opacity: 1;
+  }
+}
+
+@keyframes left-two-card-1 {
+  0% {
+    left: 362px;
+  }
+
+  100% {
+    left: 200px;
+  }
+}
+
+@keyframes left-two-card-2 {
+  0% {
+    left: 1024px;
+    opacity: 0.2;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    left: 522px;
+    opacity: 1;
+  }
+}
+
+@keyframes left-thre-card {
+  0% {
+    left: 200px;
+
+  }
+
+  100% {
+    left: 41px;
+
+  }
+}
+
+@keyframes left-thre-card-1 {
+  0% {
+    left: 522px;
+  }
+
+  100% {
+    left: 362px;
+  }
+}
+
+@keyframes left-thre-card-2 {
+  0% {
+    left: 1024px;
+    opacity: 0.2;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    left: 683px;
+    opacity: 1;
+  }
+}
+
+@keyframes right-one-card {
+  0% {
+    left: 210px;
+    top: 0px;
+  }
+
+  35% {
+    top: 180px;
+  }
+
+  100% {
+    left: 650px;
+    top: 0px;
+  }
+}
+
+@keyframes right-two-card-1 {
+  0% {
+    left: 105px;
+  }
+
+  100% {
+    left: 210px;
+  }
+}
+
+@keyframes right-two-card-2 {
+  0% {
+    left: 320px;
+    top: 0px;
+  }
+
+  35% {
+    top: 180px;
+  }
+
+  100% {
+    left: 650px;
+    top: 0px;
+  }
+}
+
+@keyframes right-thre-card {
+  0% {
+    left: 0px;
+  }
+
+  100% {
+    left: 105px;
+  }
+}
+
+@keyframes right-thre-card-1 {
+  0% {
+    left: 210px;
+  }
+
+  100% {
+    left: 320px;
+  }
+}
+
+@keyframes right-thre-card-2 {
+  0% {
+    left: 420px;
+    top: 0px;
+  }
+
+  35% {
+    top: 180px;
+  }
+
+  100% {
+    left: 650px;
+    top: 0px;
+  }
 }
