--- a/src/components/slides-card/sliders-card.css
+++ b/src/components/slides-card/sliders-card.css
@@ -1,278 +1,9 @@
 .wrapper__slider {
   position: relative;
   display: flex;
+  justify-content: center;
   width: 100%;
-  height: 408px;
+  height: 420px;
   overflow: hidden;
   background-image: url('../../img/bg_match_opacity.png');
-}
-
-.remove-card_1 {
-  animation: right-one-card;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.remove-card_2_1 {
-  animation: right-two-card-1;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-
-.remove-card_2_2 {
-  animation: right-two-card-2;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.remove-card_3_1 {
-  animation: right-thre-card;
-  animation-duration: 1.3s;
-  animation-fill-mode: forwards;
-}
-
-.remove-card_3_2 {
-  animation: right-thre-card-1;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.remove-card_3_3 {
-  animation: right-thre-card-2;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.remove-revers-card_2_1 {
-  animation: revers-two-card-1;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.remove-revers-card_2_2 {
-  animation: revers-two-card-2;
-  animation-duration: 1.3s;
-  animation-fill-mode: forwards;
-}
-
-.remove-revers-card_3_1 {
-  animation: revers-thre-card-1;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.remove-revers-card_3_2 {
-  animation: revers-thre-card-2;
-  animation-duration: 1.3s;
-  animation-fill-mode: forwards;
-}
-
-.remove-revers-card_3_3 {
-  animation: revers-thre-card-3;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.static-card-1 {
-  animation: reverse-static-1;
-  animation-delay: .1s;
-  animation-duration: .2s;
-  animation-fill-mode: forwards;
-}
-
-.static-card-3-1 {
-  animation: reverse-static-3-1;
-  animation-delay: .1s;
-  animation-duration: .2s;
-  animation-fill-mode: forwards;
-}
-
-.static-card-3-2 {
-  animation: reverse-static-3-2;
-  animation-delay: .1s;
-  animation-duration: .2s;
-  animation-fill-mode: forwards;
-}
-
-
-@keyframes revers-two-card-1 {
-  0% {
-    left: 200px;
-    top: 0;
-  }
-
-  35% {
-    top: 180px;
-  }
-
-  100% {
-    left: 1024px;
-    top: 0;
-  }
-}
-
-@keyframes revers-two-card-2 {
-  0% {
-    left: 522px;
-  }
-
-  100% {
-    left: 362px;
-  }
-}
-
-
-
-@keyframes right-one-card {
-  0% {
-    left: 362px;
-    top: 0px;
-  }
-
-  35% {
-    top: 180px;
-  }
-
-  100% {
-    left: 1024px;
-    top: 0px;
-  }
-}
-
-@keyframes right-two-card-1 {
-  0% {
-    left: 200px;
-  }
-
-  100% {
-    left: 362px;
-  }
-}
-
-@keyframes right-two-card-2 {
-  0% {
-    left: 522px;
-    top: 0px;
-  }
-
-  35% {
-    top: 180px;
-  }
-
-  100% {
-    left: 1024px;
-    top: 0px;
-  }
-}
-
-@keyframes right-thre-card {
-  0% {
-    left: 41px;
-  }
-
-  100% {
-    left: 200px;
-  }
-}
-
-@keyframes right-thre-card-1 {
-  0% {
-    left: 363px;
-  }
-
-  100% {
-    left: 522px;
-  }
-}
-
-@keyframes right-thre-card-2 {
-  0% {
-    left: 683px;
-    top: 0px;
-  }
-
-  35% {
-    top: 180px;
-  }
-
-  100% {
-    left: 1024px;
-    top: 0px;
-  }
-}
-
-@keyframes revers-thre-card-1 {
-  0% {
-    left: 41px;
-    top: 0px;
-  }
-
-  35% {
-    top: 180px;
-  }
-
-  100% {
-    left: 1024px;
-    top: 0px;
-  }
-}
-
-@keyframes revers-thre-card-2 {
-  0% {
-    left: 683px;
-  }
-
-  100% {
-    left: 522px;
-  }
-}
-
-@keyframes revers-thre-card-3 {
-  0% {
-    left: 362px;
-  }
-
-  35% {
-    top: 180px;
-  }
-
-  100% {
-    left: 1024px;
-  }
-}
-
-@keyframes reverse-static-1 {
-  0% {
-    left: 362px;
-  }
-
-  100% {
-    left: 362px;
-  }
-}
-
-@keyframes reverse-static-3-1 {
-  0% {
-    left: 200px;
-    opacity: 0.5;
-    z-index: 2;
-  }
-
-  100% {
-    left: 200px;
-    opacity: 1;
-  }
-}
-
-@keyframes reverse-static-3-2 {
-  0% {
-    left: 522px;
-    opacity: 0.5;
-  }
-
-  100% {
-    left: 522px;
-    opacity: 1;
-  }
 }
