--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --primary__color: #456d80;
   --secondary__color: #7893a0;
   --color-white: #fff;
-  --shadow-card: #324d67;
+  --shadow-card: #b5c0cbad;
   --border-card: #4d829a67;
   --placeholder-color: #8f9597a8;
 }
