--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,3 +1,9 @@
 .container-pages {
-  padding: 0.5rem 0.7rem;
+  padding: 0.5rem 2rem 0 1.5rem;
+  border-left: 1px solid wheat;
+  width: 100%;
+}
+
+.container-pages>h3 {
+  margin-bottom: 2rem;
 }
