--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -23,12 +23,6 @@
   border-radius: 1.2rem 0 1.2rem 0;
 }
 
-.card__body,
-.card__result,
-.card__actions {
-  margin-top: 1.4rem;
-}
-
 .card__checkbox {
   display: flex;
   flex-direction: column;
@@ -42,12 +36,24 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* flex-grow: 1; */
   gap: 0.5rem;
+}
+
+.result {
+  width: 100%;
+  height: 80px;
+  padding: 0.5rem;
+  background-color: inherit;
+  resize: none;
+  border: #fdffff 1px solid;
+  color: #527797;
+  border-radius: 6px;
+  font-size: 1.5rem;
 }
 
 .card__actions {
   display: flex;
+  margin-top: 1rem;
   justify-content: space-between;
   padding: 0 3rem;
 }
