--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,7 +2,7 @@
   position: absolute;
   display: flex;
   top: 10px;
-  left: -285px;
+  left: -300px;
   width: 280px;
   height: 400px;
   flex-direction: column;
@@ -11,11 +11,9 @@
   border: 1px solid var(--border-card);
   border-radius: 10px;
   box-shadow: var(--shadow-card) 3px 4px 10px;
-  background-image: linear-gradient(
-    to top,
-    var(--primary-bg__color),
-    var(--bg-dark)
-  );
+  background-image: linear-gradient(to top,
+      var(--primary-bg__color),
+      var(--bg-dark));
   font-family: 'Roboto', sans-serif;
   color: var(--primary__color);
   flex-shrink: 0;
