--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,9 +49,33 @@
   height: 70px;
 }
 
-.info__image>img {
+.info__image > img {
   cursor: pointer;
   position: absolute;
   top: -3rem;
   left: 1rem;
+}
+
+@media (max-width: 765px) {
+  .logo {
+    display: flex;
+    align-items: end;
+    font-family: 'Margarine', cursive;
+    font-size: 1rem;
+    text-shadow: var(--color-white) 2px 2px 3px;
+    padding-left: 3.5rem;
+    padding-bottom: 1rem;
+  }
+
+  .info__title {
+    display: none;
+  }
+
+  .info__image > img {
+    cursor: pointer;
+    position: absolute;
+    width: 70px;
+    top: 0.5rem;
+    left: 1rem;
+  }
 }
