--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,9 +8,6 @@
   margin: 0 auto;
   padding: 0 1.5rem;
   background-color: var(--primary-bg__color);
-}
-
-.container-header {
   border-radius: 1rem 1rem 0 0;
 }
 
@@ -57,6 +54,12 @@
 }
 
 @media (max-width: 765px) {
+  .logo-menu {
+    display: flex;
+    height: 50px;
+    justify-content: space-between;
+    color: var(--secondary__color);
+  }
   .logo {
     display: flex;
     align-items: end;
@@ -74,8 +77,8 @@
   .info__image > img {
     cursor: pointer;
     position: absolute;
-    width: 70px;
-    top: 0.5rem;
-    left: 1rem;
+    width: 50px;
+    top: 0.7rem;
+    left: 5rem;
   }
 }
