--- a/src/components/nav-menu/nav-menu.css
+++ b/src/components/nav-menu/nav-menu.css
@@ -67,9 +67,9 @@
 
 @media (max-width: 765px) {
   .nav-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: block;
+    /* flex-direction: column; */
+    /* justify-content: space-between; */
     padding: 1rem 0;
     color: var(--primary__color);
   }
